Sun Feb 18 17:16:41 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* tests/Tokens_Test.cpp (main): Reordered the #ifdefs for the
	  ACE_HAS_TOKENS_LIBRARY stuff.  Thanks to Kitty for reporting
 	  this.

Sun Feb 18 16:28:45 2001  Chris Gill  <cdgill@cs.wustl.edu>

        * ace/RB_Tree.h: Changed order of method declarations to (hopefully)
          dodge an internal compiler error on VxWorks.

Sun Feb 18 09:59:18 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* netsvcs/clients/Tokens:
	* netsvcs/servers/main.cpp (main): 
	* netsvcs/servers/svc.conf: 
	* netsvcs/lib/Token_Handler: Only compile this stuff if the
	  ACE_HAS_TOKENS_LIBRARY macro is enabled.  Thanks to Carlos
	  for reporting this.

        * ace/Object_Manager.cpp: Added a check for ACE_HAS_TOKENS_LIBRARY
	  so we can skip initializing certain things if that macro is
 	  undefined.
  
	* ace/Token_Collection.*:
	* ace/Token_Invariants.*: 
	* ace/Token_Manager.*:
	* ace/Local_Tokens.*: 
  	* ace/Remote_Tokens.*: 
	* ace/Token_Request_Reply.*:
	  Only compile these files if ACE_HAS_TOKENS_LIBRARY is enabled
	  since this functionality does not appear to be widely used and
	  yet it takes up space.

	* tests/Tokens_Test.cpp (main): Only run this test if 
	  ACE_HAS_TOKENS_LIBRARY is defined.

Sat Feb 17 17:23:46 2001  Darrell Brunsch <brunsch@uci.edu>

        * ace/SOCK_Dgram_Mcast.cpp:

          Integrated a fix from Keith Nicewarner <knicewar@erg.sri.com>
          In effect, this reverts the multicast code changed on 
              Fri Jan 26 11:18:15 2001  Douglas C. Schmidt  ...
          for all platforms except linux.  

Sat Feb 17 15:52:09 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/run_all_list.pm:
        * tests/run_tests.pl:
          Remove obsolete scripts.

Sat Feb 17 13:26:17 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ace/POSIX_Asynch_IO.cpp (thread_function): Make sure to cast